@@ -2,6 +2,11 @@
 
 	* Update version to 0.6.4.
 
+	* parser.y: Much improved error messages about illegal types in
+	attributes, operations and parameters.  Also, explicit errors
+	added for missing struct, union and enum definitions with missing
+	identifiers.
+
 	* (IDLF_PROPERTIES): New syntax flag; properties can be used
 	independently of XPIDL.
 
